# jtmethtools

./: .gitignore  README.md  pyproject.toml  reads.py
docs/: api_overview.md  index.html  jtmethtools.html  search.js
docs/jtmethtools/: _quality_profiles.html  _tests.html  alignments.html  classes.html  image_arrays.html  methylation_data.html  methylation_images.html  pearl_figures.html  scripts.html  util.html
docs/jtmethtools/_tests/: test_methylation_data.html  tests.html
docs/jtmethtools/image_arrays/: _alignment_data.html  generate_images.html  images.html
docs/jtmethtools/scripts/: filter_CH.html  filter_bam_by_readlen.html  generate_images.html  methylation_metrics.html  metrics.html  read_stats.html  write_methylation_data.html  write_mixed_bam.html
src/: alignments.py  reads.py  util.py
src/jtmethtools/: __init__.py  _quality_profiles.py  alignment_data.py  alignments.py  classes.py  generate_images.py  images.py  methylation_data.py  pearl_figures.py  pearl_images.py  quality_profiles.py  reads.py  util.py
src/jtmethtools/_tests/: test_methylation_data.py  tests.py
src/jtmethtools/_tests/tmp/: test_region.single.tsv  tst2_full.sam
src/jtmethtools/_tests/tmp/test-methylation-data/t1_defaults/: locus_data.parquet  metadata.json  read_data.parquet
src/jtmethtools/_tests/tmp/test-methylation-data/t2_all_chrm_unmethylated/: locus_data.parquet  metadata.json  read_data.parquet
src/jtmethtools/_tests/tmp/test-methylation-data/t3_regions/: locus_data.parquet  metadata.json  read_data.parquet
src/jtmethtools/image_arrays/: __init__.py  generate_images.py  images.py
src/jtmethtools/images/: _alignment_data.py  generate_images.py  images.py
src/jtmethtools/scripts/: filter_CH.py  filter_bam_by_readlen.py  generate_images.py  methylation_metrics.py  metrics.py  position_vs_frag_len.py  read_stats.py  write_alignment_dataset.py  write_methylation_data.py  write_mixed_bam.py
src/jtmethtools/scripts/tmp/test_metdata-16.1/: metadata.json
src/jtmethtools/tests/: tests.py
