[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jtmethtools"
version = "0.2.7"
description = "Tools & data structures for methylation data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pysam>=0.22.1",
    "pandas>=2.0.0",
    "attrs",
    "pytest",
    "pyarrow==18.1",
    "psutil"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jtm-generate-images = "jtmethtools.scripts.generate_images:parse_args_and_run"
jtm-write-alignment-data = "jtmethtools.scripts.write_alignment_dataset:bam_to_parquet"
