[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jtmethtools"
version = "0.2.12.0b2"
description = "Tools & data structures for methylation data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pysam>=0.22.1",
    "pandas>=2.0.0",
    "attrs",
    "pytest",
    "pyarrow==18.1",
    "psutil",
    "matplotlib==3.10",
    "datargs"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jtm-generate-images = "jtmethtools.scripts.generate_images:parse_args_and_run"
jtm-write-alignment-data = "jtmethtools.scripts.write_alignment_dataset:main"
jtm-read-stats = "jtmethtools.scripts.read_stats:cli"
jtm-filter-ch = "jtmethtools.scripts.filter_CH:main"
jtm-rs-pos-beta = "jtmethtools.scripts.methylation_metrics:cli_met_by_pos"