[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jtmethtools"
version = "0.2.17.0"  # update changes list https://devlabcomputationalwiki.atlassian.net/wiki/spaces/Wiki/pages/edit-v2/123928577
description = "Tools & data structures for methylation data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pysam>=0.22.1",
    "pandas>=2,<3",
    "attrs",
    "pytest",
    "pyarrow==18.1",
    "psutil",
    "matplotlib==3.10",
    "datargs",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jtm-generate-images = "jtmethtools.scripts.generate_images:parse_args_and_run"
#jtm-write-alignment-data = "jtmethtools.scripts.write_alignment_dataset:main"
jtm-write-methylation-data = "jtmethtools.scripts.write_methylation_data:main"
jtm-read-stats = "jtmethtools.scripts.read_stats:cli"
jtm-filter-ch = "jtmethtools.scripts.filter_CH:main"
jtm-rs-pos-beta = "jtmethtools.scripts.methylation_metrics:cli_met_by_pos"
jtm-stats-in-regions = "jtmethtools.scripts.methylation_metrics:cli_met_stats_in_regions"
jtm-write-mixed-bam = "jtmethtools.scripts.write_mixed_bam:cli"
jtm-write-mixed-dataset = "jtmethtools.methylation_data:cli_synthetic_sample"